complete api for brands
